## Changelog

## master

- Fix: wrong task id output in airflow logs.

## v0.2.1

- Add: Non SSL support for mesos.
- Add: Decline all outstanding offers if there are no tasks in queue
- Fix: "object has no attribute execution_date"
- API Add: Add api call to get out all queued tasks 
- Add: Prometheus metrics for airflow_queue_gauge and airflow_mesos_queue_gauge
- Fix: ISSUE-4
- Add: decline RefuseSeconds to give other frameworks the chance to get offers

## v0.1.4

- Add: execute_config support. 

## v0.1.2

- Add: Documentation
- Change it to support python >= 3.6
- Update requirement in the setup.py
- Add: Suppress mesos framework offers if there are no tasks in the queue
- Add: support of custom docker environment (more details in the readme.md)
- Change: Mesos task name would be generated by Airflow dag_id, task_id and execution_date

## v0.1.1

- Add Mesos Executor
- Make container type configurable and add TTY for UCR container

## v0.1.0:
  Creation