@@ -284,6 +284,7 @@ sensors_enabled = NamedHivePartitionSensor
 mesos_ssl = True
 mesos_fetch_uri = http://devclient1.lab.local:8881
 mesos_fetch_uri_username = andreas
+attributes = False
 master = devtest.lab.local:5050
 framework_name = Airflow
 checkpoint = True
